--- a/CRUD_Operation/appsettings.json
+++ b/CRUD_Operation/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SQLServerDB": "Server=Neelakandan_OJ\\SQLEXPRESS;Database=SQL_LEARNING;TrustServerCertificate=True;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,9 +9,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SQLServerDB": "Data Source=NEELAKANDAN_OJ\\SQLEXPRESS;Database=SQL_LEARNING;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
+
+
   "JwtSettings": {
     "Issuer": "http://localhost:5000",
     "Audience": "http://localhost:5000",
