--- a/CRUD_Operation/appsettings.json
+++ b/CRUD_Operation/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQLServerDB": "Server=Neelakandan_OJ\\SQLEXPRESS;Database=SQL_LEARNING;TrustServerCertificate=True;Trusted_Connection=True;"
+    "SQLServerDB": "Server=tcp:neelakandan.database.windows.net,1433;Initial Catalog=SQL_LEARNING;Persist Security Info=False;User ID=localadmin;Password=Neelan@2001;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
